blocks/pet-details/pet-details.css
/* ... */
.pet-details .submit-inquiry-button {
  display: none;

  color: #fff;
  background-color: var(--compare-button-bg-color);
}

.pet-details .submit-inquiry-button.visible {
  display: block;
}

.pet-details .pet-details-button.right-arrow:after,
.pet-details a.pet-details-button.right-arrow:after {
  content: '';
  display: inline-block;
  width: 17px;
  height: 16px;
  margin-left: 16px;
  vertical-align: middle;
  mask-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='17' fill='none' %3E%3Cg clip-path='url(%23A)' stroke='%23fff' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M.5 8.471h15m-7 7l7-7-7-7'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='A'%3E%3Cpath fill='%23fff' transform='translate(0 .471)' d='M0 0h16v16H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
  mask-repeat: no-repeat;
  mask-position: center;
  mask-size: contain;
  background-color: var(--background-color);
}
.pet-details button.pet-details-button.primary,
.pet-details a.pet-details-button.primary {
  background-color: var(--compare-button-bg-color);
}
.pet-details .pet-details-button-icon-favorite {
  display: inline-block;
  vertical-align: middle;
  width: 24px;
  height: 24px;
  -webkit-mask: url('../../icons/favorite.svg') no-repeat center center;
  mask: url('../../icons/favorite.svg') no-repeat center center;
  background-color: #09090d;
  margin-right: 16px;
}
.pet-details .about-pet-favorite {
  color: var(--text-weak, #222222);
}
.pet-details .about-pet-favorite.favorited .pet-details-button-icon-favorite {
  display: inline-block;
  vertical-align: middle;
  width: 24px;
  height: 24px;
  -webkit-mask: url('../../icons/favorited.svg') no-repeat center center;
  mask: url('../../icons/favorited.svg') no-repeat center center;
  background-color: red;
  margin-right: 16px;
}

/* layout container */
.pet-details .about-pet-container,
.pet-details .shelter-container,
.pet-details .checklist-container {
  border-radius: 12px;
  box-shadow: 0px 2px 12px 0px #0000001a;
  color: #000000;
}
.pet-details .about-pet-body > h3,
.pet-details .checklist-container .checklist-item-label {
  color: #000000;
}
.pet-details .checklist-container > h2 {
  color: var(--text-main, #09090d);
}

/* carousel section */

.pet-details .image-section .image-div {
  padding-bottom: 32px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 24px;
}
.pet-details .carousel-section .image-div > div,
.pet-details .image-section .image-div > div {
  aspect-ratio: 375 / 389;
  width: 100%;
  max-width: 100%;
}

.pet-details .image-section .image-div object,
.pet-details .carousel-section .image-div img,
.pet-details .carousel-section .image-div object,
.pet-details .image-section .image-div img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.pet-details .carousel-section .image-carousel {
  position: relative;
  padding-bottom: 80px;
}
.pet-details .carousel-section .image-carousel-slide-image {
  aspect-ratio: 375 / 389;
}
.pet-details .carousel-section .image-carousel-slide-image img,
.pet-details .carousel-section .image-carousel-slide-image object {
  width: 100%;
  height: 100%;
  object-fit: contain;
  user-select: none;
  pointer-events: none;
}
.pet-details .carousel-section .image-carousel-controls-container {
  padding: 0;
  text-align: center;
  position: absolute;
  width: 100%;
  left: 0;
  bottom: 24px;
}
.pet-details .carousel-section .image-carousel-controls {
  display: inline-flex;
  align-items: center;
}
.pet-details .carousel-section .image-carousel-previous,
.pet-details .carousel-section .image-carousel-next {
  width: 40px;
  height: 40px;
  padding: 8px;
  margin-top: 0;
  margin-bottom: 0;
  background: transparent;
}
.pet-details .carousel-section .image-carousel-previous:after,
.pet-details .carousel-section .image-carousel-next:after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  -webkit-mask: url('../../icons/arrow.svg') no-repeat center center;
  mask: url('../../icons/arrow.svg') no-repeat center center;
  background-color: #999999;
}
.pet-details .carousel-section .image-carousel-previous:after {
  transform: rotate(180deg);
}
.pet-details .carousel-section .image-carousel-previous {
  margin-right: 4px;
}
.pet-details .carousel-section .image-carousel-after {
  margin-left: 4px;
}
.pet-details .carousel-section .image-carousel-navigator {
  width: 12px;
  height: 12px;
  background: #999999;
  border-radius: 50%;
  padding: 0;
  margin: 0 5px;
}
.pet-details .carousel-section .image-carousel-navigator[aria-disabled='true'] {
  background: var(--color-purple);
  transform: scale(1.33);
}
.pet-details .carousel-section .image-carousel {
  width: 100%;
  overflow: hidden;
}
.pet-details .carousel-section .image-carousel-layout-container {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
  overflow: hidden;
}
.pet-details .carousel-section .image-carousel-slider-container {
  overflow-x: visible;
  grid-column: 1 / 2;
  grid-row: 1;
}
.pet-details .carousel-section .image-carousel-slider {
  display: flex;
  flex-wrap: nowrap;
}
.pet-details .carousel-section .image-carousel-slide {
  flex: 1;
  padding-left: 1px;
  padding-right: 1px;
  user-select: none;
}
.pet-details .carousel-section .image-carousel-slide[aria-hidden='true'] {
  display: block;
}

/* checklist section */
.pet-details .checklist-container {
  display: none;
  padding: 32px 24px 32px 24px;
}

.pet-details .checklist-container.visible {
  display: block;
}

.pet-details .checklist-item {
  margin-top: 48px;
}
.pet-details .checklist-item-label {
  display: flex;
}
.pet-details .checklist-item-label-index {
  display: block;
  box-sizing: border-box;
  flex-shrink: 0;
  width: 56px;
  height: 56px;
  padding-top: 12px;
  margin-right: 16px;
  border-radius: 50%;
  text-align: center;
  color: #302280;
  background-color: #ebe8fc;
}
/* ... */

